personpage shows thesis only fixed bug on disambiguation added messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -77,8 +77,6 @@ basket.infoActions      = For example, you can
 basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
-batchedit = 
-
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -422,26 +420,42 @@ didyouknow.editYourProfile = It is much easier for your colleagues to find you, 
 didyouknow.isbn            = In order to save a book, a journal, or a magazine in your publication list, you can <a href="/postPublication?selTab=3#selTab3">insert easily</a> a unique identifier like an ISBN, an ISSN, or a DOI. It searches for the other metadata self-acting and transmits these into your post input form. This saves time and nerves.
 didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!</p><p>The option 'scan code' on the 'post publication' page {0} opens a plugin that scans the code. You will get a prefilled publication form with all the available meta-data of the book.</p><p>{0} can also add a QR-Code to a white spot on the first page of your uploaded documents. If you print the document with this QR-code, you can scan the QR-code to later cite this paper.</p> 
 
-disambiguation.addPersonButton            = Add person
-disambiguation.close                      = Close
-disambiguation.header                     = Disambiguation
-disambiguation.linkJustShowPerson         = Just show person
-disambiguation.linkPersonButton           = Add person
-disambiguation.modalLinkPersonCloseButton = Close
-disambiguation.modalLinkPersonContent     = Do you really want to assoziate the following person name with this publication?
-disambiguation.modalLinkPersonHeader      = Person name assoziation
-disambiguation.modalNewPersonCloseButton  = Close
-disambiguation.modalNewPersonContent      = This action will redirect you to a new page prefilled with the current name where you can create a new person.
-disambiguation.modalNewPersonHeader       = Add new person to thesis
-disambiguation.modalSearchPersonHeader    = Add other person to thesis
-disambiguation.newPerson                  = add a person with the name {0}
-disambiguation.newPersonButton            = New person
-disambiguation.notFound                   = No persons found for author name {0}
-disambiguation.otherPersonButton          = Other person
-disambiguation.person                     = Person
-disambiguation.personsPanelHeader         = Persons with the name
-disambiguation.postPanelHeader            = Related Post
-disambiguation.searchPersonButton         = Search other name
+disambiguation.addPersonButton                      = Add person
+disambiguation.close                                = Close
+disambiguation.fromPost                             = From post
+disambiguation.header                               = Disambiguation
+disambiguation.link.modal.abortButton               = Abort
+disambiguation.link.modal.msg                       = Your choice of the person associated to the publication can be saved in our system, so that no other have to make this choice again. Do you want to save your choice?
+disambiguation.link.modal.saveButton                = Yes, save
+disambiguation.link.modal.title                     = Help our community with your choice.
+disambiguation.link.modal.viewButton                = No, show person only.
+disambiguation.linkJustShowPerson                   = Just show person
+disambiguation.linkPersonButton                     = Add person
+disambiguation.listExplanation                      = To differ between persons with the same name, the academic degree and the title of an important publication will be displayed.
+disambiguation.modalLinkPersonCloseButton           = Close
+disambiguation.modalLinkPersonContent               = Do you really want to assoziate the following person name with this publication?
+disambiguation.modalLinkPersonHeader                = Person name assoziation
+disambiguation.modalNewPersonCloseButton            = Close
+disambiguation.modalNewPersonContent                = This action will redirect you to a new page prefilled with the current name where you can create a new person.
+disambiguation.modalNewPersonHeader                 = Add new person to thesis
+disambiguation.modalSearchPersonHeader              = Add other person to thesis
+disambiguation.newPerson                            = add a person with the name {0}
+disambiguation.newPersonButton                      = New person
+disambiguation.noInfo                               = No additional information
+disambiguation.notFound                             = No persons found for author name {0}
+disambiguation.otherPerson                          = Other person
+disambiguation.otherPerson.modal.abortButton        = Abort
+disambiguation.otherPerson.modal.msg                = You can search a person by another name (alias or former name) or create a new differentional person with the name "{0}" in the system.
+disambiguation.otherPerson.modal.newPersonButton    = Add new person
+disambiguation.otherPerson.modal.search.placeholder = Search person..
+disambiguation.otherPerson.modal.selectPersonButton = Select person
+disambiguation.otherPerson.modal.title              = Select or create another person
+disambiguation.otherPersonButton                    = Other person
+disambiguation.person                               = Person
+disambiguation.personsPanelHeader                   = Persons with the name
+disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
+disambiguation.postPanelHeader                      = Related Post
+disambiguation.searchPersonButton                   = Search other name
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = show posts recently discussed by members of {0}
@@ -518,6 +532,7 @@ error.503                                    = Sorry, the service is not availab
 error.action.valid                           = The action is unspecified.
 error.activation_code_expired                = Your activation code has expired. You can <a href="/register">register</a> again using the same user name.
 error.addUrl                                 = Error: {0}
+error.add_new_thesis                         = You should add just one thesis. 
 error.author_page_without_authorname         = Sorry, this page does not exist on our server. I your want to access an author page, please specify an author name like /author/AUTHORNAME
 error.bibtex_no_hash                         = Sorry, this page does not exist on our server. If you want to access a publication page, please specify a BibTeX key like /bibtex/HASH.
 error.bibtexkey_no_key                       = Sorry, this page does not exist on our server. If you want to access a publication page, please use a URL like /bibtexkey/KEY.
@@ -672,7 +687,7 @@ error.user_page_with_wrong_user_similarity   = Sorry, the user similarity is not
 error.user_page_without_username             = Sorry, this page does not exist on our server. If you want to access a user page, please specify a username like /user/USERNAME.
 error.viewable_page_not_logged_in            = In order to access this page, you need to be logged in so that we can check whether you are a member of the requested group. In order to see public posts of a given group, use, the URL scheme /group/GROUPNAME.
 error.viewable_page_without_group            = Sorry, this page does not exist on our server. If you want to access a viewable page, please specify a groupname like /viewable/GROUPNAME.
-error.add_new_thesis						 = You should add just one thesis. 
+
 example = example
 
 export = export
@@ -988,7 +1003,6 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
-login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1353,7 +1367,6 @@ persons.intro.navi.genealogy = Academic Genealogy
 persons.intro.navi.search    = Search Author
 persons.intro.navi.wiskidz   = The Project
 persons.intro.search.desc    = TODO: translate: Finden Sie Autoren \u00FCber deren Namen oder \u00FCber Publikationstitel. Sie finden dann Informationen \u00FCber die Publikationen des Autors und k\u00F6nnen ausgehend von diesem Autor durch den akademischen Stammbaum navigieren.
-persons.intro.wiskidz        = 
 persons.intro.wiskidz.desc   = TODO: translate: Das Forschungsprojekt zur Datenbank der {0} Autoren
 persons.intro.wiskidz.text   = The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
 
@@ -1449,6 +1462,12 @@ post.meta.unpick                                        = unpick
 post.meta.unpick.all                                    = unpick all
 post.meta.unpick.title                                  = remove all publication posts on this page from your clipboard
 post.meta.xml                                           = XML
+post.person.role                                        = publisher's role
+post.person.role.help                                   = please select the role of this person in this publication
+post.person.thesis_advisor                              = thesis's advisor
+post.person.thesis_doctor_vater                         = thesis's doctor vater
+post.person.thesis_first_reviewer                       = thesis's first reviewer
+post.person.thesis_reviewer                             = thesis's reviewer
 post.resource.about                                     = about
 post.resource.aboutrelevantfor                          = add some tags which describe the relevance of your post for some groups
 post.resource.abstract                                  = abstract
@@ -1696,13 +1715,6 @@ post.resource.volume.help                               = volume of a journal or
 post.resource.waitingForTags                            = fetching recommended tags
 post.resource.year                                      = year
 post.resource.year.help                                 = the year of publication, typically consisting of four numbers
-post.person.role										= publisher's role
-post.person.thesis_doctor_vater							= thesis's doctor vater
-post.person.thesis_first_reviewer						= thesis's first reviewer
-post.person.thesis_reviewer								= thesis's reviewer
-post.person.thesis_advisor								= thesis's advisor
-post.person.role.help									= please select the role of this person in this publication
-
 
 post_bibtex.button_label_check                       = check
 post_bibtex.button_label_post                        = post
@@ -2299,7 +2311,6 @@ time.about_x_seconds = about {0} seconds
 time.an_hour         = an hour
 time.and             = and
 time.postfix         = \ ago
-time.prefix          = 
 time.x_days          = {0} days
 time.x_hours         = {0} hours
 time.x_minutes       = {0} minutes
