--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -77,8 +77,6 @@ basket.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
 basket.removeAll        = Ablage leeren
 basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
-batchedit = 
-
 batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
 batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
 batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
@@ -426,21 +424,25 @@ disambiguation.close                                = Schlie\u00DFen
 disambiguation.fromPost                             = Aus dem Eintrag
 disambiguation.header                               = Disambiguierung
 disambiguation.link.modal.abortButton               = Abbrechen
-disambiguation.link.modal.msg                       = Ihre Auswahl der zur Publikation geh\u00F6rigen Person kann im System gespeichert werden, sodas andere diese Auswahl nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Auswahl speichern?
+disambiguation.link.modal.msg                       = Ihre Auswahl der zur Publikation geh\u00F6rigen Person kann im System gespeichert werden, sodass andere diese Auswahl nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Auswahl speichern?
 disambiguation.link.modal.saveButton                = Ja, Speichern
 disambiguation.link.modal.title                     = Helfen Sie mit Ihrer Auswahl unserer Nutzergemeinschaft
 disambiguation.link.modal.viewButton                = Nein, Person nur zeigen
 disambiguation.linkJustShowPerson                   = Nur Person anzeigen
 disambiguation.linkPersonButton                     = Person hinzuf\u00FCgen 
-disambiguation.listExplanation                      = Zur Unterscheidung von Personen mit gleichen Namen, werden, sofern im System hinterlegt, der akademische Grad der Person, sowie der Titel einer wichtigen Publikation (z.B. Doktorarbeit) angezeigt.
+disambiguation.listExplanation                      = Zur Unterscheidung von Personen mit gleichen Namen werden, sofern im System hinterlegt, der akademische Grad der Person, sowie der Titel einer wichtigen Publikation (z.B. Doktorarbeit) angezeigt.
+disambiguation.modalLinkPersonCloseButton           = Schlie\u00DFen
+disambiguation.modalLinkPersonContent               = Wollen Sie den folgenden Personennamen mit dieser Publikation assozieren?
+disambiguation.modalLinkPersonHeader                = Personennamen assoziieren
 disambiguation.modalNewPersonCloseButton            = Schlie\u00DFen
-disambiguation.modalNewPersonContent                = M\u00C3\u00B6chten Sie eine weitere Person mit dem aktuellen Namen anlegen?
+disambiguation.modalNewPersonContent                = M\u00F6chten Sie eine weitere Person mit dem aktuellen Namen anlegen?
 disambiguation.modalNewPersonHeader                 = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.modalSearchPersonHeader              = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.newPerson                            = eine Person mit dem Namen {0} hinzuf\u00FCgen
+disambiguation.newPersonButton                      = Neue Person
 disambiguation.noInfo                               = keine weiteren Infos
 disambiguation.notFound                             = Es wurden keine Personen mit dem Namen {0} gefunden
-disambiguation.otherPerson                          = eine andere Person
+disambiguation.otherPerson                          = Andere Person
 disambiguation.otherPerson.modal.abortButton        = Abbrechen
 disambiguation.otherPerson.modal.msg                = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
 disambiguation.otherPerson.modal.newPersonButton    = Neue Person anlegen
@@ -2298,7 +2300,6 @@ time.about_a_second  = einer Sekunde
 time.about_x_seconds = {0} Sekunden
 time.an_hour         = einer Stunde
 time.and             = und
-time.postfix         = 
 time.prefix          = vor 
 time.x_days          = {0} Tagen
 time.x_hours         = {0} Stunden
