--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2255,6 +2255,7 @@ user.settings.realname                = realname
 user.settings.saml.identityProviderId = Institution-id
 user.settings.saml.userId             = SAML-username
 user.settings.userid                  = user id
+user.sharedGroups                     = shared groups
 user.tmp.password                     = temporary password
 user.useExternalPicture               = picture source
 user.useExternalPicture.false         = locally uploaded
