--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2266,6 +2266,7 @@ user.settings.realname                = Realname
 user.settings.saml.identityProviderId = Institutions-ID
 user.settings.saml.userId             = SAML-Benutzername
 user.settings.userid                  = Benutzernummer
+user.sharedGroups                     = gemeinsame Gruppen
 user.tmp.password                     = Tempor\u00E4res Passwort
 user.useExternalPicture               = Bild-Quelle
 user.useExternalPicture.false         = lokales Profilbild
