--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2311,6 +2311,7 @@ time.about_x_seconds = about {0} seconds
 time.an_hour         = an hour
 time.and             = and
 time.postfix         = \ ago
+time.prefix          = pre
 time.x_days          = {0} days
 time.x_hours         = {0} hours
 time.x_minutes       = {0} minutes
