added again to fix the problem

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LibrarythingScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LibrarythingScraperUnitURLTest3.bib
@@ -1,3 +1,5 @@
 @book{librarything,
+	author = {Nicky Hager},
+ 	title = {Secret power},
 	url = {http://www.librarything.com/work/1926837/details}
 }
