enhancement for the scraper to catch the url that has .pdf for correct scraping

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
@@ -1,6 +1,6 @@
 @article{10.1109/2.901164,
-author = {Steve Lawrence and David M. Pennock and Gary William Flake and Robert Krovetz and Frans M. Coetzee and Eric Glover and Finn &#197;rup Nielsen and Andries Kruger and C. Lee Giles},
-title = {Persistence of Web References in Scientific Research},
+author = {Steve Lawrence and David M. Pennock and Gary William Flake and Robert Krovetz and Frans M. Coetzee and Eric Glover and Finn Årup Nielsen and Andries Kruger and C. Lee Giles},
+title = {Persistence of Web References in Scientific Research},                                                                          
 journal ={Computer},
 volume = {34},
 number = {2},
