form reworked for #2357

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -819,6 +819,7 @@ group.cv.headline                                        = Grouppage of the grou
 group.cv.members                                         = Members
 group.cv.publications                                    = Recently added publications
 group.cv.title                                           = CV of {0} group
+group.description.headline                               = description
 group.description.help                                   = a short description of the group
 group.doesnotexist.header                                = group does not exist
 group.groupRequest.description                           = Here you can request a new group. Please enter the desired name of the group and the main purpose of the group you request. We will inform you as soon as a system administrator approved your group.
@@ -1860,6 +1861,8 @@ settings.group.addUser.button                               = add user
 settings.group.addUser.help                                 = the user's name that is to be added
 settings.group.allowJoin                                    = User join request
 settings.group.allowJoin.help                               = If enabled, other users have the possibility to send join requests.
+settings.group.cv.admin.topic                               = TODO!!\r\n\r\nYour <a href="{0}">CV page</a> allows other users to get to know you and your work. The CV page displays personal data and the picture you have entered in your <a href="/settings?selTab=0">profile</a>. You can either choose one of the predefined layouts or create your own layout. In the latter case, you are strongly advised to read the <a href="/help_en/CV">help page</a>.<br />When you have settled for a layout, you may save it by clicking on the "save" button.<br /><b>Be careful:</b> If you change the layout from a custom layout to a predefined one, all your changes are lost, if you did not save them first!
+settings.group.cv.heading                                   = edit group CV
 settings.group.delUser                                      = remove user
 settings.group.delUser.button                               = remove
 settings.group.delUser.button.title                         = remove this user from the group
@@ -1872,6 +1875,7 @@ settings.group.deny.button.title                            = deny join request 
 settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
+settings.group.description.help                             = This description will be displayed in the sidebar of the group page.
 settings.group.disband                                      = disband group
 settings.group.disband.InfoText                             = TODO: some kind of information what happens when a group will be deleted
 settings.group.disband.notEmptyInfoText                     = This group can only be disbanded, if you remove all other group members.
