--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -825,6 +825,7 @@ group.cv.headline                                        = Gruppenseite der Grup
 group.cv.members                                         = Mitglieder
 group.cv.publications                                    = Die neuesten Publikationen
 group.cv.title                                           = Lebenslauf der Gruppe {0}
+group.description.headline                               = Beschreibung
 group.description.help                                   = eine kurze Beschreibung der Gruppe
 group.doesnotexist                                       = 
 group.doesnotexist.header                                = Gruppe existiert nicht
@@ -1869,6 +1870,8 @@ settings.group.addUser.button                               = Benutzer hinzuf\u0
 settings.group.addUser.help                                 = Der Name des Benutzers, der zur Gruppe hinzugef\u00FCgt werden soll
 settings.group.allowJoin                                    = Gruppenbeitrittsgesuche
 settings.group.allowJoin.help                               = Falls aktiviert haben andere Benutzer die M\u00F6glichkeit Ihnen Gruppenbeitrittsgesuche zu senden.\r\n\r\n
+settings.group.cv.admin.topic                               = TODO!!\r\n\r\nIhr <a href="{0}">Gruppen-Lebenslauf</a> erm\u00F6glicht es anderen Benutzern, Ihre Gruppe und Ihre Arbeit kennen zu lernen. Angezeigt werden pers\u00F6nliche Daten (inkl. Ihrem Bild), die Sie in Ihrem <a href="/settings?selTab=0">Profil</a> angegeben haben. Sie k\u00F6nnen entweder vordefinierte Layouts benutzen oder Ihr eigenes Layout erstellen. Im letzteren Falle lesen Sie bitte die <a href="/help_de/CV">Hilfeseite</a>.<br />Sobald Sie sich f\u00FCr ein Layout entschieden haben, k\u00F6nnen Sie dieses mit einem Klick auf den "Speichern"-Button abspeichern.<br /><b>Achtung:</b> Wechseln Sie das Layout von einem eigenen zu einem vordefinierten Layout, so gehen alle Ihre \u00C4nderungen verloren, falls Sie nicht vorher gespeichert haben!
+settings.group.cv.heading                                   = Lebenslauf der Gruppe editieren
 settings.group.decUser.button                               = ablehnen
 settings.group.decUser.button.title                         = Mitgliedschaftsantrag des Benutzers ablehnen
 settings.group.decUser.noUser                               = Keine offenen Anfragen
@@ -1883,6 +1886,7 @@ settings.group.deny.button                                  = Antrag ablehnen
 settings.group.deny.button.title                            = Antrag ablehnen
 settings.group.denyReason                                   = Grund
 settings.group.denyReason.help                              = Der Grund, weshalb der Benutzer nicht der Gruppe beitreten darf
+settings.group.description.help                             = Dieser Beschreibungstext wird in der Seitenleiste der Gruppenseite angezeigt.
 settings.group.disband                                      = Gruppe aufl\u00F6sen
 settings.group.disband.InfoText                             = TODO: Folgen des L\u00F6schens der Gruppe
 settings.group.disband.notEmptyInfoText                     = Sie k\u00F6nnen diese Gruppe erst l\u00F6schen, wenn Sie vorher alle anderen Mitglieder aus der Gruppe entfernen.
