Added BibtexKey search --> some fixes

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1093,6 +1093,8 @@ navi.federated                   = federated search
 navi.federatedAuthor             = federated search: author
 navi.federatedTag	             = federated search: tag
 navi.federatedUser	             = federated search: user
+navi.federatedGroup	             = federated search: group
+navi.federatedBibtexKey          = federated search: BibTeX key
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
