--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1091,6 +1091,8 @@ navi.federated                   = System\u00FCbergreifende Suche
 navi.federatedAuthor             = System\u00FCbergreifende Suche: Autor
 navi.federatedTag	             = System\u00FCbergreifende Suche: Tag
 navi.federatedUser	             = System\u00FCbergreifende Suche: Benutzer
+navi.federatedGroup	             = System\u00FCbergreifende Suche: Gruppe
+navi.federatedBibtexKey          = System\u00FCbergreifende Suche: BibTeX-Schl\u00FCssel
 navi.followees                   = verfolgte Benutzer
 navi.followers                   = Verfolger
 navi.friend                      = Freund
