fixed messages, uped poms to 3.2.2 (fixing missing Russian messages)

--- a/bibsonomy-webapp/src/main/resources/themes/puma_messages_en.properties
+++ b/bibsonomy-webapp/src/main/resources/themes/puma_messages_en.properties
@@ -1,7 +1,7 @@
 
 button.collect.description  = Collect publications and bookmarks either from web pages, with easy, convenient, and supporting input methods or with different import possibilities  
 button.description          = Move your mouse pointer over an image 
-button.organize.description = Use simple tags to search and find your posts. Generate fast and easy publication lists for your personal home page or your own publications.
+button.organize.description = Use simple tags to search and find your posts. Generate publication lists, for presentation on your personal home page or for citing them in your own work, fast and easily .
 button.share.description    = Send your own publications to your institutional repository and share it with other users
 
 image.button.collect        = /resources_puma/image/bt_collect_link.png
@@ -31,11 +31,11 @@ post.resource.openaccess.additionalfields.additionaltitle.help   = additional ti
 post.resource.openaccess.additionalfields.description            = Please enter some additional metadata for use in repository.
 post.resource.openaccess.additionalfields.headline               = additional metadata for repository
 post.resource.openaccess.additionalfields.institution            = institution and fachbereich
-post.resource.openaccess.additionalfields.institution.help       = Institution and fachbereich. format:<br/>city, name of university, FB short, FB long<br/>\ne.g. Kassel, Universit\u00E4t, FB 16, Elektrotechnik/Informatik
+post.resource.openaccess.additionalfields.institution.help       = Institution and Department. format:<br/>city, name of university, FB short, FB long<br/>\ne.g. Kassel, Universit\u00E4t, FB 16, Elektrotechnik/Informatik
 post.resource.openaccess.additionalfields.phdoralexam            = oral examination day
 post.resource.openaccess.additionalfields.phdoralexam.help       = oral examination day in format dd.mm.yyyy
 post.resource.openaccess.additionalfields.referee                = referee
-post.resource.openaccess.additionalfields.referee.help           = referee. format: surename, first name (Title)
+post.resource.openaccess.additionalfields.referee.help           = referee in format: surename, first name (Title)
 post.resource.openaccess.additionalfields.save                   = save metadata
 post.resource.openaccess.additionalfields.sponsor                = sponsors
 post.resource.openaccess.additionalfields.sponsor.help           = sponsors
@@ -60,7 +60,7 @@ register.ldap.optional          = optional information
 register.ldap.required          = required information
 register.ldap.step1             = please insert your LDAP access data
 register.ldap.step2             = Welcome! This is your first login. Please validate your account data
-register.ldap.step2.description = Your user name is public and your publication references and bookmarks will be labeld with your user name. Once given you cannot change this user name.
+register.ldap.step2.description = Your user name is public and your publication references and bookmarks will be labeled with your user name. Once set you cannot change this user name.
 
 system.about        = {0} supports you purposeful and easy at your daily business with publications, lists of publications, and bookmarks 
 system.desc         = academical publication management<br />collect, organize, and share publications
