--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -826,6 +826,7 @@ group.groupRequest.description                           = Here you can request 
 group.groupRequest.reason                                = reason for request
 group.groupRequest.reason.help                           = the reason why you need the group
 group.groupRequest.userName                              = username
+group.joinDate                                           = join date
 group.leave                                              = leave group
 group.memberOf                                           = member
 group.name                                               = name
@@ -849,6 +850,7 @@ groups.actions.unshareDocuments       = unshare
 groups.actions.unshareDocuments.title = Unshare your documents with the group
 groups.documentsharing.disabled       = disabled
 groups.documentsharing.shared         = shared
+groups.role                           = role
 groups.role.admin                     = adminstrator
 groups.role.moderator                 = moderator
 groups.role.user                      = user
