--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -833,6 +833,7 @@ group.groupRequest.description                           = Sie k\u00F6nnen hier 
 group.groupRequest.reason                                = Begr\u00FCndung
 group.groupRequest.reason.help                           = Der Zweck zudem die Gruppe verwendet werden soll
 group.groupRequest.userName                              = Benutzername
+group.joinDate                                           = Beitrittsdatum
 group.leave                                              = Gruppe verlassen
 group.memberOf                                           = Mitglied
 group.name                                               = Kurzname
@@ -856,6 +857,7 @@ groups.actions.unshareDocuments       = nicht teilen
 groups.actions.unshareDocuments.title = Ihre Dokumente nicht mit dieser Gruppe teilen
 groups.documentsharing.disabled       = deaktiviert
 groups.documentsharing.shared         = geteilt
+groups.role                           = Rolle
 groups.role.admin                     = Administrator
 groups.role.moderator                 = Moderator
 groups.role.user                      = Nutzer
