--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2304,6 +2304,7 @@ time.about_a_second  = einer Sekunde
 time.about_x_seconds = {0} Sekunden
 time.an_hour         = einer Stunde
 time.and             = und
+time.postfix         = 
 time.prefix          = vor 
 time.x_days          = {0} Tagen
 time.x_hours         = {0} Stunden
