added missing messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -851,7 +851,7 @@ groups.actions.unshareDocuments.title = Unshare your documents with the group
 groups.documentsharing.disabled       = disabled
 groups.documentsharing.shared         = shared
 groups.role                           = role
-groups.role.admin                     = adminstrator
+groups.role.admin                     = administrator
 groups.role.moderator                 = moderator
 groups.role.user                      = user
 
@@ -1863,7 +1863,7 @@ settings.group.addUser.button                               = add user
 settings.group.addUser.help                                 = the user's name that is to be added
 settings.group.allowJoin                                    = User join request
 settings.group.allowJoin.help                               = If enabled, other users have the possibility to send join requests.
-settings.group.cv.admin.topic                               = TODO!!\r\n\r\nYour <a href="{0}">CV page</a> allows other users to get to know you and your work. The CV page displays personal data and the picture you have entered in your <a href="/settings?selTab=0">profile</a>. You can either choose one of the predefined layouts or create your own layout. In the latter case, you are strongly advised to read the <a href="/help_en/CV">help page</a>.<br />When you have settled for a layout, you may save it by clicking on the "save" button.<br /><b>Be careful:</b> If you change the layout from a custom layout to a predefined one, all your changes are lost, if you did not save them first!
+settings.group.cv.admin.topic                               = Your <a href="{0}">group CV page</a> allows other users to get to know your group and your work. The group CV page displays the group description and the picture you have entered at the group settings tab. You can either choose one of the predefined layouts or create your own layout. In the latter case, you are strongly advised to read the <a href="/help_en/CV">help page</a>.<br />When you have settled for a layout, you may save it by clicking on the "save" button.<br /><b>Be careful:</b> If you change the layout from a custom layout to a predefined one, all your changes are lost, if you did not save them first!
 settings.group.cv.heading                                   = edit group CV
 settings.group.delUser                                      = remove user
 settings.group.delUser.button                               = remove
@@ -1911,6 +1911,7 @@ settings.group.permission.fetch                             = fetch permissions
 settings.group.permission.help                              = Click to fetch the selected group's permissions.
 settings.group.permissionHeading                            = edit group level permissions
 settings.group.permissionIntro                              = Select a group, fetch its current permissions and add or remove permissions.
+settings.group.picture.header                               = a picture for the group CV
 settings.group.profileInfo                                  = The information you enter here will be displayed on the <a href="{0}">group CV page</a>.
 settings.group.realname                                     = real group name
 settings.group.remInvite.button                             = dismiss
