--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1872,7 +1872,7 @@ settings.group.addUser.button                               = Benutzer hinzuf\u0
 settings.group.addUser.help                                 = Der Name des Benutzers, der zur Gruppe hinzugef\u00FCgt werden soll
 settings.group.allowJoin                                    = Gruppenbeitrittsgesuche
 settings.group.allowJoin.help                               = Falls aktiviert haben andere Benutzer die M\u00F6glichkeit Ihnen Gruppenbeitrittsgesuche zu senden.\r\n\r\n
-settings.group.cv.admin.topic                               = TODO!!\r\n\r\nIhr <a href="{0}">Gruppen-Lebenslauf</a> erm\u00F6glicht es anderen Benutzern, Ihre Gruppe und Ihre Arbeit kennen zu lernen. Angezeigt werden pers\u00F6nliche Daten (inkl. Ihrem Bild), die Sie in Ihrem <a href="/settings?selTab=0">Profil</a> angegeben haben. Sie k\u00F6nnen entweder vordefinierte Layouts benutzen oder Ihr eigenes Layout erstellen. Im letzteren Falle lesen Sie bitte die <a href="/help_de/CV">Hilfeseite</a>.<br />Sobald Sie sich f\u00FCr ein Layout entschieden haben, k\u00F6nnen Sie dieses mit einem Klick auf den "Speichern"-Button abspeichern.<br /><b>Achtung:</b> Wechseln Sie das Layout von einem eigenen zu einem vordefinierten Layout, so gehen alle Ihre \u00C4nderungen verloren, falls Sie nicht vorher gespeichert haben!
+settings.group.cv.admin.topic                               = Ihr <a href="{0}">Gruppen-Lebenslauf</a> erm\u00F6glicht es anderen Benutzern, Ihre Gruppe und Ihre Arbeit kennen zu lernen. Angezeigt wird die Beschreibung der Gruppe (inkl. Bild), die Sie in den Gruppeneinstellungen angegeben haben. Sie k\u00F6nnen entweder vordefinierte Layouts benutzen oder Ihr eigenes Layout erstellen. Im letzteren Falle lesen Sie bitte die <a href="/help_de/CV">Hilfeseite</a>.<br />Sobald Sie sich f\u00FCr ein Layout entschieden haben, k\u00F6nnen Sie dieses mit einem Klick auf den "Speichern"-Button abspeichern.<br /><b>Achtung:</b> Wechseln Sie das Layout von einem eigenen zu einem vordefinierten Layout, so gehen alle Ihre \u00C4nderungen verloren, falls Sie nicht vorher gespeichert haben!
 settings.group.cv.heading                                   = Lebenslauf der Gruppe editieren
 settings.group.decUser.button                               = ablehnen
 settings.group.decUser.button.title                         = Mitgliedschaftsantrag des Benutzers ablehnen
@@ -1922,6 +1922,7 @@ settings.group.permission.fetch                             = Berechtigungen lad
 settings.group.permission.help                              = Klicken Sie hier um die derzeitigen gruppenbasierten Berechtigungen anzuzeigen.
 settings.group.permissionHeading                            = Gruppenbasierte Berechtigungen bearbeiten
 settings.group.permissionIntro                              = W\u00E4hlen Sie eine Gruppe aus, laden Sie die aktuellen gruppenbasierten Berechtigungen und l\u00F6schen Sie diese oder f\u00FCgen Sie weitere hinzu.
+settings.group.picture.header                               = Ein Bild f\u00FCr den Gruppen-Lebenslauf
 settings.group.profileInfo                                  = Die Informationen, die Sie hier eingeben, werden auf dem <a href="{0}">Lebenslauf</a> der Gruppe angezeigt.
 settings.group.realname                                     = Name der Gruppe
 settings.group.remInvite.button                             = entfernen
