reorder the values

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest1.bib
@@ -1,5 +1,5 @@
 @article{doi:10.1080/09540091.2014.906388,
-author = {Ahmed, Soha and Zhang, Mengjie and Peng, Lifeng},
+author = {Soha Ahmed and Mengjie Zhang and Lifeng Peng},
 title = {Improving feature ranking for biomarker discovery in proteomics mass spectrometry data using genetic programming},
 journal = {Connection Science},
 volume = {26},
