--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest3.bib
@@ -1,5 +1,5 @@
 @article{doi:10.1080/14786419.2010.534733,
-author = {Taherpour, Avat (Arman) and Maroofi, Hossein and Rafie, Zeinab and Larijani, Kambiz},
+author = { Avat (Arman)   Taherpour  and  Hossein   Maroofi  and  Zeinab   Rafie  and  Kambiz   Larijani },
 title = {Chemical composition analysis of the essential oil of Melissa officinalis L. from Kurdistan, Iran by HS/SPME method and calculation of the biophysicochemical coefficients of the components},
 journal = {Natural Product Research},
 volume = {26},
