--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TaylorAndFrancisScraperUnitURLTest2.bib
@@ -1,5 +1,5 @@
 @article{doi:10.1080/09540091.2011.587505,
-author = {Gayler, Ross   W. and Levy, Simon   D.},
+author = { Ross   W.   Gayler  and  Simon   D.   Levy },
 title = {Compositional connectionism in cognitive science II: the localist/distributed dimension},
 journal = {Connection Science},
 volume = {23},
