convert to doi-url

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/TheLancetScraperUnitURLTest.bib
@@ -9,6 +9,6 @@ number = {9962},
 pages = {55--71},
 publisher = {Elsevier},
 title = {Global epidemiology of HIV among female sex workers: influence of structural determinants},
-url = {http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(14)60931-4/abstract},
+url = {http://dx.doi.org/10.1016/S0140-6736(14)60931-4},
 volume = {385}
 }
