--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest11.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest11.bib
@@ -3,7 +3,7 @@ abstract = {This book contains cutting-edge research material presented by resea
 author = {International Conference on Computational Intelligence, Cyber Security and Krishnan, G. Sai Sundara},
 isbn = {9788132216803 8132216806},
 refid = {869929497},
-title = {Computational intelligence, cyber security and computational models : proceedings of ICC3, 2013},
+title = {Computational Intelligence, Cyber Security and Computational Models : Proceedings of ICC3, 2013},
 url = {http://www.amazon.de/Computational-Intelligence-Cyber-Security-Models-ebook/dp/B00GXY5FFC/ref=sr_1_1},
 year = {2014}
 }
